--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "slugify": "^1.4.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
