config for deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://cha-fa.github.io/",
+  "homepage": "https://cha-fa.github.io/social_network/",
   "name": "social_network",
   "version": "0.1.0",
   "private": true,
